make file working

--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,5 @@
 CC = g++
-CC_FLAGS = -Wall -ansi
+CC_FLAGS = -Wall -ansi -Werror -pedantic 
 EXEC = rshell.out
 SOURCES = $(wildcard *.cpp)
 OBJECTS = $(SOURCES:.cpp=.o)
